--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ body{
     background: #E6E6E6;
 }
 
+/** Estilos menu de navegación */
+
 .header{
     position: relative;
     width: 100%;
@@ -40,8 +42,8 @@ body{
 .menu__imagen-logo{
     width: 150px;
     height: 100%;
-    padding-top: 10px;
     object-fit: contain;
+    display: flex;
 }
 
 .lists{
@@ -58,6 +60,7 @@ body{
     margin: 0 10px;
     color: var(--black);
     font-size: 18px;
+    font-weight: 500;
     padding: 8px;
     border-radius: 10px;
 }
@@ -70,4 +73,222 @@ body{
 .lists__a{
     background: var(--orange);
     color: var(--white);
+}
+
+
+
+
+
+/** Estilos del pie de pagina(Footer) */
+
+.footer{
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+    background: linear-gradient(rgba(242, 116, 5, 0.8), rgba(242, 116, 5, 0.8)), url(../images/img-1.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    /* position: absolute; */
+}
+
+/* .footer::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: rgba(242, 116, 5, 0.8);
+    position: absolute;
+} */
+
+.footer__contenedor{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    /* position: absolute; */
+}
+
+.footer__contacto{
+    width: 100%;
+    height: 100%;
+    /* margin: 40px auto; */
+    padding-top: 120px;
+}
+
+.footer__inform{
+    width: 100%;
+    text-align: center;
+    margin: 20px 0 20px 0;
+}
+
+.footer__h4{
+    font-size: 20px;
+    font-weight: bold;
+    color: var(--white);
+    margin-bottom: 10px;
+}
+
+.footer__p{
+    display: inline-block;
+    font-size: 17px;
+    font-weight: normal;
+    color: var(--white);
+    text-align: justify;
+    /* border-bottom: 1px solid #fff; */
+}
+
+.footer__formulario{
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
+    margin: 0 auto;
+}
+
+.footer__titulo{
+    width: 50%;
+    margin: auto;
+    border: 1px solid #fff;
+}
+
+.footer__h2{
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    font-weight: normal;
+    margin: 5px auto;
+}
+
+.footer__hr{
+    width: 80%;
+    height: 2px;
+    margin: 5px auto;
+    background: #fff;
+    margin-bottom: 15px;
+    border: none;
+}
+
+.formulario{
+    width: 80%;
+    background: #fff;
+    opacity: 0.68;
+    border-radius: 24px;
+    border: 2px solid var(--white);
+    margin: 10px auto;
+    padding: 10px;
+}
+
+.formulario__contenido{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.formulario__label{
+    text-align: center;
+    color: var(--black);
+    font-size: 20px;
+    margin: 10px 0 10px 0;
+}
+
+.formulario__input{
+    width: 70%;
+    height: 30px;
+    margin: auto;
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    outline: none;
+    font-size: 17px;
+    padding-left: 10px;
+    color: var(--black);
+}
+
+.formulario__textarea{
+    width: 70%;
+    height: 100px;
+    margin: auto;
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    outline: none;
+    font-size: 17px;
+    padding: 10px;
+    color: var(--black);
+}
+
+.enviar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.enviar__formulario{
+    width: 150px;
+    height: 40px;
+    background: var(--orange);
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    font-size: 22px;
+    color: var(--white);
+    text-align: center;
+    cursor: pointer;
+    transition: 0.7s;
+}
+
+.enviar__formulario:hover{
+    opacity: 0.7;
+}
+
+
+.créditos{
+width: 100%;
+height: 100%;
+background: var(--white);
+display: flex;
+}
+
+.redes{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.redes__i{
+    font-size: 26px;
+    padding: 12px;
+    margin: 12px;
+    border-radius: 50%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-whatsapp{
+    background: #25D366;
+    color: var(--white);
+}
+
+.fa-facebook-f{
+    background: #1873EB;
+    color: #fff;
+}
+
+.fa-instagram{
+    background: #FF3E00;
+    color: #fff;
+}
+
+.créditos__desarrollo{
+    width: 100%;
+}
+
+.créditos__nombres{
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
