--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,7 @@ display: flex;
     width: 100%;
     height: 100%;
     font-size: 20px;
+    font-weight: normal;
     display: flex;
     justify-content: center;
     align-items: center;
