--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,82 @@ body{
     background: #f5f2f296;
 }
 
+/** Estilos menu de navegación */
+
+.header{
+    width: 100%;
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.75); 
+    background: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+}
+
+.menu__logo{
+    margin-left: 40px;
+}
+
+.menu__imagen-logo{
+    width: 150px;
+    height: 100%;
+    object-fit: contain;
+    display: flex;
+}
+
+.lists{
+    padding-right: 40px;
+}
+
+.lists__ul{
+    display: flex;
+    list-style: none;
+}
+
+.lists__enlaces{
+    text-decoration: none;
+    margin: 0 10px;
+    color: var(--black);
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px;
+    border-radius: 10px;
+}
+
+.lists__enlaces:hover{
+    background: var(--orange);
+    color: var(--white);
+}
+
+.lists__a{
+    background: var(--orange);
+    color: var(--white);
+}
+
+#check{
+    display: none;
+}
+
+.menu__hamburguesa{
+    font-size: 25px;
+    color: #000;
+    margin-right: 30px;
+    cursor: pointer;
+    display: none;
+    width: 48px;
+    height: 48px;
+}
+
 /** Contenido de la pagina */
 .contenido{
     width: 80%;
@@ -110,7 +186,213 @@ body{
     font-size: 20px;
     margin-bottom: 50px;
 }
-/** Contenido de la página */
+
+
+
+/** Estilos del pie de pagina(Footer) */
+
+.footer{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(242, 116, 5, 0.8), rgba(242, 116, 5, 0.8)), url(../images/img-1.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.footer__contenedor{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    /* position: absolute; */
+}
+
+.footer__contacto{
+    width: 100%;
+    height: 100%;
+    padding-top: 120px;
+}
+
+.footer__inform{
+    width: 100%;
+    text-align: center;
+    margin: 20px 0 20px 0;
+}
+
+.footer__h4{
+    font-size: 20px;
+    font-weight: bold;
+    color: var(--white);
+    margin-bottom: 10px;
+}
+
+.footer__p{
+    display: inline-block;
+    font-size: 17px;
+    font-weight: normal;
+    color: var(--white);
+    text-align: justify;
+    text-align: center;
+}
+
+.footer__formulario{
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
+    margin: 0 auto;
+}
+
+.footer__titulo{
+    width: 50%;
+    margin: auto;
+    border: 1px solid #fff;
+}
+
+.footer__h2{
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    font-weight: normal;
+    margin: 5px auto;
+}
+
+.footer__hr{
+    width: 80%;
+    height: 2px;
+    margin: 5px auto;
+    background: #fff;
+    margin-bottom: 15px;
+    border: none;
+}
+
+.formulario{
+    width: 80%;
+    background: #fff;
+    opacity: 0.68;
+    border-radius: 24px;
+    border: 2px solid var(--white);
+    margin: 10px auto;
+    padding: 10px;
+}
+
+.formulario__contenido{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.formulario__label{
+    text-align: center;
+    color: var(--black);
+    font-size: 20px;
+    margin: 10px 0 10px 0;
+}
+
+.formulario__input{
+    width: 70%;
+    height: 30px;
+    margin: auto;
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    outline: none;
+    font-size: 17px;
+    padding-left: 10px;
+    color: var(--black);
+}
+
+.formulario__textarea{
+    width: 70%;
+    height: 100px;
+    margin: auto;
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    outline: none;
+    font-size: 17px;
+    padding: 10px;
+    color: var(--black);
+}
+
+.enviar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.enviar__formulario{
+    width: 150px;
+    height: 40px;
+    background: var(--orange);
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    font-size: 22px;
+    color: var(--white);
+    text-align: center;
+    cursor: pointer;
+    transition: 0.7s;
+}
+
+.enviar__formulario:hover{
+    opacity: 0.7;
+}
+
+
+.créditos{
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    display: flex;
+}
+
+.redes{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.redes__i{
+    font-size: 26px;
+    padding: 12px;
+    margin: 12px;
+    border-radius: 50%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-whatsapp{
+    background: #25D366;
+    color: var(--white);
+}
+
+.fa-facebook-f{
+    background: #1873EB;
+    color: #fff;
+    padding: 13px 17px 13px 17px;
+}
+
+.fa-instagram{
+    background: #FF3E00;
+    color: #fff;
+}
+
+.créditos__desarrollo{
+    width: 100%;
+}
+
+.créditos__nombres{
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    font-weight: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 /** Responsive design */
